name:                resonator
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://git.klar.sh/klardotsh/resonator#readme
license:             AGPL-3
license-file:        LICENSE.md
author:              klardotsh <josh@klar.sh>
maintainer:          klardotsh <josh@klar.sh>
copyright:           2020 Josh Klar
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    exposed-modules:     Example
                       , BitrateUtils
                       , CodecUtils
                       , Config
                       , FFprobe
                       , Filesystem
                       , Library
                       , ProjectMeta
                       , TextUtils
                       , TimeUtils
    other-modules:       Paths_resonator
    build-depends:       base >= 4.13 && < 5
                       , aeson
                       , bytestring
                       , casing
                       , containers
                       , directory
                       , filemanip
                       , filepath
                       , magic
                       , mime
                       , pretty-simple
                       , raw-strings-qq
                       , scotty
                       , string-conversions
                       , text
                       , text-format
                       , time
                       , tomland
                       , typed-process
                       , unliftio
                       , wai
    default-language:    Haskell2010
    default-extensions:  DerivingStrategies
                       , EmptyCase
                       , FlexibleContexts
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , LambdaCase
                       , MultiParamTypeClasses
                       , OverloadedStrings
                       , RecordWildCards
                       , ScopedTypeVariables
                       , StandaloneDeriving
                       , TypeApplications

executable resonator-exe
    hs-source-dirs:      app
    main-is:             Main.hs
    -- thanks, https://lexi-lambda.github.io/blog/2018/02/10/an-opinionated-guide-to-haskell-in-2018/ !
    ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
    build-depends:       base
                       , resonator
    default-language:    Haskell2010
    default-extensions:  DerivingStrategies
                       , EmptyCase
                       , FlexibleContexts
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , LambdaCase
                       , MultiParamTypeClasses
                       , OverloadedStrings
                       , RecordWildCards
                       , ScopedTypeVariables
                       , StandaloneDeriving
                       , TypeApplications

test-suite resonator-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    build-depends:       base
                       , resonator
                       , hspec
                       , hspec-wai
                       , hspec-wai-json
                       , http-types
                       , tasty
                       , tasty-hunit
                       , aeson
    ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
    default-language:    Haskell2010
    default-extensions:  DerivingStrategies
                       , EmptyCase
                       , FlexibleContexts
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , LambdaCase
                       , MultiParamTypeClasses
                       , OverloadedStrings
                       , RecordWildCards
                       , ScopedTypeVariables
                       , StandaloneDeriving
                       , TypeApplications

source-repository head
    type:     git
    location: https://git.klar.sh/klardotsh/resonator
